# auth-website

./: .env  Cargo.toml  README.md
src/: appconfig.rs  auth.rs  error.rs  handler.rs  main.rs
src/middleware/: login.rs
src/model/: user.rs
static/: index.html  login.html
