[package]
name = "auth-website"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3"
actix-session="0.4"
actix-redis="0.9"
serde={version="1", features=["derive"]}
serde_json="1"
rust-argon2="0.8"
lazy_static="1.4"
actix-identity="0.3"
mongodb={version="1.2", features=["tokio-runtime"]}
uuid={version="0.8", features=["v4", "serde"]}
env_logger="0.8"
futures="0.3"
dotenv="0.15"
log="0.4"

